# multi-agent-assistant-axis

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
docs/: index.html
docs/data/: index.json  smoke.json
docs/data/baselines/: random_vector__alpha_s=-5.0_alpha_c=-5.0.json  random_vector__alpha_s=5.0_alpha_c=5.0.json  single_agent_direct.json  single_agent_self_revision.json
docs/data/cells/: -2.0__-2.0.json  -2.0__-5.0.json  -2.0__0.0.json  -2.0__2.0.json  -2.0__5.0.json  -5.0__-2.0.json  -5.0__-5.0.json  -5.0__0.0.json  -5.0__2.0.json  -5.0__5.0.json  0.0__-2.0.json  0.0__-5.0.json  0.0__0.0.json  0.0__2.0.json  0.0__5.0.json  2.0__-2.0.json  2.0__-5.0.json  2.0__0.0.json  2.0__2.0.json  2.0__5.0.json  5.0__-2.0.json  5.0__-5.0.json  5.0__0.0.json  5.0__2.0.json  5.0__5.0.json
docs/templates/: index.html.j2
outputs/gsm8k__llama31_8b__axis_layer16__seed42/: config.json  metrics.json  per_condition_metrics.csv  per_example_results.jsonl
outputs/gsm8k__llama31_8b__axis_layer16__seed42/baselines/: random_vector__alpha_s=-5.0_alpha_c=-5.0.json  random_vector__alpha_s=5.0_alpha_c=5.0.json  single_agent_direct.json  single_agent_self_revision.json  summary.json
outputs/smoke/: transcripts.jsonl
plans/: 001_mvp_assistant_axis_qa.md
scripts/: build_dashboard.py  run_baselines.py  run_sweep.py  smoke_test.py
src/: axis.py  data.py  generate.py  metrics.py  protocols.py  scoring.py  utils.py
tests/: test_scoring.py
